--- a/site/config/config.json
+++ b/site/config/config.json
@@ -1,1 +1,1 @@
-{"port":3000,"mongoose":{"uri":"mongodb://localhost/kurs", "options":{"server":{	"socketOptions":{		"keepAlive":1}}}}}
+{"scripts":[],"styles":["/stylesheets/style.css"],"port":3000,"mongoose":{"uri":"mongodb://localhost/kurs", "options":{"server":{	"socketOptions":{		"keepAlive":1}}}}}
